# forex-analytics-pipeline

./: .gitignore  README.md  dagster_cloud.yaml  pyproject.toml  requirements.txt  template.env
.github/workflows/: branch_deployments.yml  deploy.yml
data_integration/airbyte_configs/: currency_beacon_updated.yaml
data_orchestration/: definitions.py
data_orchestration/assets/: __init__.py  airbyte_assets.py  data_freshness_asset.py  dbt_assets.py
data_orchestration/jobs/: __init__.py  forex_pipeline_job.py
data_orchestration/schedules/: __init__.py  schedules.py
data_orchestration/sensors/: airbyte_sensor.py
data_transformation/: dbt_project.yml  package-lock.yml  profiles.yml
data_transformation/models/core/: dim_currency.sql  dim_currency_pair.sql  dim_date.sql  fact_exchange_rates.sql  schema.yml
data_transformation/models/marts/: mart_currency_strength_index.sql  mart_daily_rates.sql  mart_monthly_snapshots.sql  mart_rate_changes.sql  mart_rolling_averages.sql
data_transformation/models/staging/: schema.yml  stg_currencies.sql  stg_rates_all_sources.sql  stg_rates_flattened.sql  stg_timeseries_rates_flattened.sql
